docs(pagination-nav): style pagination nav

--- a/packages/tools/docusaurus/docs/concepts/index.mdx
+++ b/packages/tools/docusaurus/docs/concepts/index.mdx
@@ -19,6 +19,7 @@ TODO describe this as coming soon... possibly at outlook at possible pages and i
         label: 'Go to Token',
         variant: 'clear',
         size: 'small',
+        iconAnimation: true,
         iconAfter: {
           icon: 'chevron-right',
         },
