--- a/packages/tools/docusaurus/docs/foundations/index.mdx
+++ b/packages/tools/docusaurus/docs/foundations/index.mdx
@@ -19,6 +19,7 @@ Foundations are the visual elements needed to create your Design System and its 
         label: 'Go to Token',
         variant: 'clear',
         size: 'small',
+        iconAnimation: true,
         iconAfter: {
           icon: 'chevron-right',
         },
@@ -32,6 +33,7 @@ Foundations are the visual elements needed to create your Design System and its 
         label: 'Explore Components',
         variant: 'clear',
         size: 'small',
+        iconAnimation: true,
         iconAfter: {
           icon: 'chevron-right',
         },
@@ -45,6 +47,7 @@ Foundations are the visual elements needed to create your Design System and its 
         label: 'Learn about Layouts',
         variant: 'clear',
         size: 'small',
+        iconAnimation: true,
         iconAfter: {
           icon: 'chevron-right',
         },
@@ -58,6 +61,7 @@ Foundations are the visual elements needed to create your Design System and its 
         label: 'Go to Modules',
         variant: 'clear',
         size: 'small',
+        iconAnimation: true,
         iconAfter: {
           icon: 'chevron-right',
         },
