--- a/packages/tools/docusaurus/docs/foundations/layout/sections.mdx
+++ b/packages/tools/docusaurus/docs/foundations/layout/sections.mdx
@@ -366,9 +366,8 @@ TODO: update gutter Token in KickstartDS
         text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr."
         link={{
           hidden: true,
-          variant: "clear",
+          href:'#',
           label: "Explore generators",
-
         }}
         imageSpacing
       />
@@ -379,9 +378,8 @@ TODO: update gutter Token in KickstartDS
         text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
         link={{
           hidden: true,
-          variant: "clear",
+          href:'#',
           label: "See our components",
-
         }}
         imageSpacing
       />
@@ -392,9 +390,8 @@ TODO: update gutter Token in KickstartDS
         text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr."
         link={{
           hidden: true,
-          variant: "clear",
+          href:'#',
           label: "See our components",
-
         }}
         imageSpacing
       />
@@ -405,9 +402,8 @@ TODO: update gutter Token in KickstartDS
         text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
         link={{
           hidden: true,
-          variant: "clear",
+          href:'#',
           label: "See our components",
-
         }}
         imageSpacing
       />
@@ -418,9 +414,8 @@ TODO: update gutter Token in KickstartDS
         text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
         link={{
           hidden: true,
-          variant: "clear",
+          href:'#',
           label: "See our components",
-
         }}
         imageSpacing
       />
@@ -431,9 +426,8 @@ TODO: update gutter Token in KickstartDS
         text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
         link={{
           hidden: true,
-          variant: "clear",
+          href:'#',
           label: "See our components",
-
         }}
         imageSpacing
       />
@@ -444,9 +438,8 @@ TODO: update gutter Token in KickstartDS
         text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
         link={{
           hidden: true,
-          variant: "clear",
+          href:'#',
           label: "See our components",
-
         }}
         imageSpacing
       />
@@ -457,9 +450,8 @@ TODO: update gutter Token in KickstartDS
         text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
         link={{
           hidden: true,
-          variant: "clear",
+          href:'#',
           label: "See our components",
-
         }}
         imageSpacing
       />
@@ -470,9 +462,8 @@ TODO: update gutter Token in KickstartDS
         text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
         link={{
           hidden: true,
-          variant: "clear",
+          href:'#',
           label: "See our components",
-
         }}
         imageSpacing
       />
@@ -483,9 +474,8 @@ TODO: update gutter Token in KickstartDS
         text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
         link={{
           hidden: true,
-          variant: "clear",
+          href:'#',
           label: "See our components",
-
         }}
         imageSpacing
       />
@@ -496,9 +486,8 @@ TODO: update gutter Token in KickstartDS
         text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
         link={{
           hidden: true,
-          variant: "clear",
+          href:'#',
           label: "See our components",
-
         }}
         imageSpacing
       />
@@ -509,9 +498,8 @@ TODO: update gutter Token in KickstartDS
         text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
         link={{
           hidden: true,
-          variant: "clear",
+          href:'#',
           label: "See our components",
-
         }}
         imageSpacing
       />
@@ -545,7 +533,7 @@ TODO: update gutter Token in KickstartDS
     text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr."
     link={{
       hidden: true,
-      variant: 'clear',
+      href: '#',
       label: 'Explore generators',
     }}
   />
@@ -558,7 +546,7 @@ TODO: update gutter Token in KickstartDS
     text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
     link={{
       hidden: true,
-      variant: 'clear',
+      href: '#',
       label: 'See our components',
     }}
   />
@@ -571,7 +559,7 @@ TODO: update gutter Token in KickstartDS
     text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr."
     link={{
       hidden: true,
-      variant: 'clear',
+      href: '#',
       label: 'See our components',
     }}
   />
@@ -584,7 +572,7 @@ TODO: update gutter Token in KickstartDS
     imageSpacing
     link={{
       hidden: true,
-      variant: 'clear',
+      href: '#',
       label: 'See our components',
     }}
   />
@@ -597,7 +585,7 @@ TODO: update gutter Token in KickstartDS
     imageSpacing
     link={{
       hidden: true,
-      variant: 'clear',
+      href: '#',
       label: 'See our components',
     }}
   />
@@ -610,7 +598,7 @@ TODO: update gutter Token in KickstartDS
     imageSpacing
     link={{
       hidden: true,
-      variant: 'clear',
+      href: '#',
       label: 'See our components',
     }}
   />
@@ -623,7 +611,7 @@ TODO: update gutter Token in KickstartDS
     imageSpacing
     link={{
       hidden: true,
-      variant: 'clear',
+      href: '#',
       label: 'See our components',
     }}
   />
@@ -636,7 +624,7 @@ TODO: update gutter Token in KickstartDS
     imageSpacing
     link={{
       hidden: true,
-      variant: 'clear',
+      href: '#',
       label: 'See our components',
     }}
   />
@@ -649,7 +637,7 @@ TODO: update gutter Token in KickstartDS
     imageSpacing
     link={{
       hidden: true,
-      variant: 'clear',
+      href: '#',
       label: 'See our components',
     }}
   />
@@ -662,7 +650,7 @@ TODO: update gutter Token in KickstartDS
     imageSpacing
     link={{
       hidden: true,
-      variant: 'clear',
+      href: '#',
       label: 'See our components',
     }}
   />
@@ -675,7 +663,7 @@ TODO: update gutter Token in KickstartDS
     imageSpacing
     link={{
       hidden: true,
-      variant: 'clear',
+      href: '#',
       label: 'See our components',
     }}
   />
@@ -688,7 +676,7 @@ TODO: update gutter Token in KickstartDS
     imageSpacing
     link={{
       hidden: true,
-      variant: 'clear',
+      href: '#',
       label: 'See our components',
     }}
   />
