--- a/packages/tools/docusaurus/docs/guides/index.mdx
+++ b/packages/tools/docusaurus/docs/guides/index.mdx
@@ -17,6 +17,7 @@ import { Columns } from '@bedrock-layout/primitives';
         label: 'Go to DS',
         variant: 'clear',
         size: 'small',
+        iconAnimation: true,
         iconAfter: {
           icon: 'chevron-right',
         },
@@ -30,6 +31,7 @@ import { Columns } from '@bedrock-layout/primitives';
         label: 'Explore Components',
         variant: 'clear',
         size: 'small',
+        iconAnimation: true,
         iconAfter: {
           icon: 'chevron-right',
         },
@@ -43,6 +45,7 @@ import { Columns } from '@bedrock-layout/primitives';
         label: 'Learn about Layouts',
         variant: 'clear',
         size: 'small',
+        iconAnimation: true,
         iconAfter: {
           icon: 'chevron-right',
         },
@@ -56,6 +59,7 @@ import { Columns } from '@bedrock-layout/primitives';
         label: 'Go to Modules',
         variant: 'clear',
         size: 'small',
+        iconAnimation: true,
         iconAfter: {
           icon: 'chevron-right',
         },
@@ -69,6 +73,7 @@ import { Columns } from '@bedrock-layout/primitives';
         label: 'Go to Modules',
         variant: 'clear',
         size: 'small',
+        iconAnimation: true,
         iconAfter: {
           icon: 'chevron-right',
         },
@@ -83,6 +88,7 @@ import { Columns } from '@bedrock-layout/primitives';
         label: 'Go to Modules',
         variant: 'clear',
         size: 'small',
+        iconAnimation: true,
         iconAfter: {
           icon: 'chevron-right',
         },
