--- a/packages/tools/docusaurus/docs/integration/index.mdx
+++ b/packages/tools/docusaurus/docs/integration/index.mdx
@@ -17,6 +17,7 @@ import { Columns } from '@bedrock-layout/primitives';
         label: 'Go to Token',
         variant: 'clear',
         size: 'small',
+        iconAnimation: true,
         iconAfter: {
           icon: 'chevron-right',
         },
@@ -30,6 +31,7 @@ import { Columns } from '@bedrock-layout/primitives';
         label: 'Learn about React',
         variant: 'clear',
         size: 'small',
+        iconAnimation: true,
         iconAfter: {
           icon: 'chevron-right',
         },
@@ -43,6 +45,7 @@ import { Columns } from '@bedrock-layout/primitives';
         label: 'Explore Frameworks',
         variant: 'clear',
         size: 'small',
+        iconAnimation: true,
         iconAfter: {
           icon: 'chevron-right',
         },
